# advent-of-code

./: prepare  run
2015/: new
2015/src/: day_1.rs  day_2.rs  day_3.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  main.rs  parser.rs
2019/Day_1/: main.py
2019/Day_10/: main.lisp
2019/Day_11/: main.lisp
2019/Day_12/: main.lisp  main.py  take2.lisp
2019/Day_13/: main.lisp
2019/Day_14/: input.txt  input2.txt  main.lisp  make_parse_better.sh
2019/Day_15/: main.lisp
2019/Day_16/: main.lisp
2019/Day_17/: main.lisp
2019/Day_18/: input.txt  input2.txt  main.lisp
2019/Day_19/: main.lisp
2019/Day_2/: main.lisp
2019/Day_20/: main.lisp
2019/Day_21/: main.lisp  map.txt  prog.txt  prog2.txt
2019/Day_22/: cleanup.sh  input2.txt  main.lisp  main.py
2019/Day_23/: main.lisp
2019/Day_24/: input.txt  main.lisp  main.py
2019/Day_25/: main.lisp  prog.txt  prog2.txt
2019/Day_3/: main.lisp
2019/Day_4/: main.lisp  main.rs
2019/Day_5/: main.lisp
2019/Day_6/: input.txt  input2.txt  main.lisp
2019/Day_7/: main.lisp
2019/Day_8/: main.lisp
2019/Day_9/: main.lisp
2022/: Cargo.toml  test.txt
2022/derive/src/: lib.rs
2022/src/: main.rs  parser.rs
2022/src/days/: d01.rs  d02.rs  d03.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
2023/: build.zig
2023/src/: day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day1.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day2.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig  main.zig  parsec.zig  parser.zig  utils.zig
2024/: main.go
2024/days/: day01.go  day02.go  day04.go  day05.go
2024/go/: aoc  main.go
2024/go/days/: day01.go  day03.go  day04.go  day06.go
2024/go/utils/: parser.go  utils.go
2024/haskell/: CHANGELOG.md  ParsecT  haskell2.cabal  stack.yaml  test.txt
2024/haskell/src/: Day01.hs  Day02.hs  Day07.hs  Day08.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day24.hs  Day25.hs  Days.hs  NanoParsec.hs  Utils.hs
2024/rust/src/: main.rs
2024/rust/src/days/: day22.rs  day23.rs  mod.rs
2025/: .gitignore  haskell2.cabal  stack.yaml  test.txt
2025/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Days.hs  Main.hs  NanoParsec.hs  Utils.hs
