cabal-version:       2.2

name:                haskell2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell2#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable haskell2
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Day01
      Day02
      Day07
      Day08
      Day09
      Day10
      Day11
      Day12
      Utils
      Days
      NanoParsec
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers, mtl
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell2
